hphp/test/zend/bad/ext/soap/tests/bugs/bug42359.php
<?php
$soap = new SoapClient(dirname(__FILE__)."/bug42359.wsdl");
print_r($soap->__getTypes());
?>